--- a/css/style.css
+++ b/css/style.css
@@ -858,7 +858,27 @@ input[type="email"] {
 	transition-delay:0.3s;
 	text-decoration:none;
 }
-
+#contact {
+    width: 75px;
+    height: 70px;
+    line-height: 70px;
+    background-color: #075E54;
+    position: fixed ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    right: 20px;
+    cursor: pointer;
+    z-index: 10000;
+    bottom: 20px;
+        box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
+}
+#contact img{
+    object-fit: contain;
+    width: 25px;
+    height: 25px;
+}
 /** gallery_area **/
 #gallery_area {
     background:#000 url(../img/home-v1/gallery-bg.jpg);
