fixed nav area padding in mainmenu section

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,10 @@ input[type="email"] {
 /******** Top Bar Styles ***********/
 
 /************ Main menu style ************/
+.nav-area-fixed {
+    bottom: 8px;
+}
+
 .logo_hide {
 	display:none;
 }
