++ button size section: "LLAMANOS AHORA"

--- a/css/style.css
+++ b/css/style.css
@@ -237,9 +237,10 @@ input[type="email"] {
 background-color: #357ebd;
 border-radius: 14px 14px 14px 14px;
 box-shadow: 1px 4px 4px #333333;
-width: 260px;
 height: 40px;
-font-size: 20px;
+width: 300px;
+font-size: 25px;
+padding-top: 2px !important;
 }
 #btn-llamanos-ahora-celular {
 }
