Added phones to all websites. Fixes in desktop navbar. Fix in Whatsapp style in all webpages.

--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ padding-top: 2px !important;
     vertical-align: bottom;
     text-decoration: none;
     font-family:  'Open Sans', sans-serif;
+    bottom: 13px;
 }
  .mainmenu li a:hover{
 	 background:#f95b5b;
@@ -391,7 +392,9 @@ padding-top: 2px !important;
  .nav .caret {
 	 display: none;
 }
-
+ .index-nav-fix {
+     top: 5px;
+ }
 
 /** sticky menu **/
  .mainmenu li .stricky-fixed{
