--- a/css/extra.css
+++ b/css/extra.css
@@ -1,7 +1,7 @@
 #contact {
     width: 75px;
     height: 70px;
-    background-color: #075E54;
+    background-color: transparent;
     position: fixed ;
     display: flex;
     justify-content: center;
@@ -15,6 +15,6 @@
 }
 #contact img{
     object-fit: contain;
-    width: 30px;
-    height: 30px;
+    width: 75px;
+    height: 80px;
 }
