--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,8 @@ padding-top: 2px !important;
 #btn-llamanos-ahora-fijo {
 }
 .button-llamanos-ahora-col {
-    padding-left: 240px ;
    top: 20px;
+   left: 225px;
    
 }
 /************ llamanos ahora style ************/
