--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ input[type="email"] {
   font-weight: normal;
   background-color: transparent;
 }
-
+ 
 
 /**
 /*******************************
@@ -230,6 +230,19 @@ input[type="email"] {
 /************ Main menu style ************/
 .nav-area-fixed {
     bottom: 8px;
+}
+.btn-primary {
+    background-color: #357ebd;
+    border-color: #357ebd;
+    height: 35px;
+    border-radius: 30px 30px;
+    margin-top: 7px;
+}
+.btn-primary a {
+    top: -23px;
+}
+.btn-primary a:hover {
+background: none !important;
 }
 /************ llamanos ahora style ************/
 
