whatsapp button annimation

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,56 @@ input[type="email"] {
   font-weight: normal;
   background-color: transparent;
 }
+
+/* //WHATSAPP CONTACT ANIMATION BLOCK */
+
+#contact::before {
+    content: '';
+      border-radius: 1000px;
+      min-width: calc(300px + 12px);
+      min-height: calc(60px + 12px);
+      border: 6px solid #00FFCB;
+      box-shadow: 0 0 60px rgba(0,255,203,.64);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: all .3s ease-in-out 0s;
+    }
+    
+    .button:hover, .button:focus {
+      color: #313133;
+      transform: translateY(-6px);
+    }
+    
+  
+    
+    #contact::after {
+      content: '';
+      width: 30px; height: 30px;
+      border-radius: 100%;
+      border: 6px solid #00FFCB;
+      position: absolute;
+      z-index: -1;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      animation: ring 1.5s infinite;
+    }
+    
+    @keyframes ring {
+      0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+      }
+      100% {
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+      }
+    }
  
 
 /**
@@ -232,8 +282,6 @@ input[type="email"] {
     bottom: 8px;
 }
 
-.btn-nav-consulta-li-container {
-}
 .btn-nav-consulta {
     border-color: #357ebd;
     background-color: #357ebd;
