--- a/css/style.css
+++ b/css/style.css
@@ -303,6 +303,14 @@ input[type="email"] {
     background: none !important;
 
 }
+.bosch-service-logo {
+    width: 31%;
+    margin-left: 10px;
+    margin-top: -17px;
+}
+.img-boss-service-123 {
+   
+}
 /************ llamanos ahora style ************/
 
 .fixed-button-llamanos-ahora {
@@ -3871,6 +3879,9 @@ section#map_area {
   height: 35px !important;
   width: auto !important;
   margin: 8px !important;
+}
+.bosch-service img {
+    height: 90px !important;
 }
 
 .payments-logos div {
